--- a/pom.xml
+++ b/pom.xml
@@ -28,20 +28,6 @@
             <version>12.26.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.azure/azure-storage-queue -->
-        <dependency>
-            <groupId>com.azure</groupId>
-            <artifactId>azure-storage-queue</artifactId>
-            <version>12.21.1</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.azure/azure-storage-file-share -->
-        <dependency>
-            <groupId>com.azure</groupId>
-            <artifactId>azure-storage-file-share</artifactId>
-            <version>12.22.1</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -66,6 +52,19 @@
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
             <version>1.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.oshi/oshi-core -->
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>6.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.2.1</version>
         </dependency>
 
     </dependencies>
