--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ target/
 target
 src/main/resources/database.properties
 data
+src/main/java/Test.java
+src/main/java/demo
 
 ### Eclipse ###
 .apt_generated
