Lưu thay đổi trước khi pull

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,18 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/RojeruSan.jar</systemPath>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.4.1</version>
 
+        </dependency>
+        <dependency>
+            <groupId>com.k33ptoo</groupId>
+            <artifactId>KControls</artifactId>
+            <version>2.0</version>
+        </dependency>
 
     </dependencies>
 
