--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <version>2.17.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.java.dev.timingframework</groupId>
+            <artifactId>timingframework</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
