--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ target/
 *.ipr
 target
 src/main/resources/database.properties
+src/main/resources/azure.properties
+
 data
 src/main/java/Test.java
 src/main/java/demo
