--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.azure/azure-storage-blob -->
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-storage-blob</artifactId>
-            <version>12.26.1</version>
+            <version>12.29.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.azure/azure-storage-common -->
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-common</artifactId>
+            <version>12.28.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
