--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
-database.host=localhost\\bravosdb
-database.port=1433
-database.username=sa
-database.password=16122005viP@
-database.name=bravosdb
+database.host=
+database.port=
+database.username=
+database.password=
+database.name=
